--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "./dist/cjs/index.node.js",
-  "types": "./dist/types/index.node.d.ts",
-  "module": "./dist/esm/index.node.js",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
+  "module": "./dist/esm/index.js",
   "exports": {
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/esm/index.js",
-    "types": "./dist/types/index.d.ts"
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/types/index.d.ts"
+    }, 
+    "./vocab": {
+      "require": "./dist/cjs/vocab/index.js",
+      "import": "./dist/esm/vocab/index.js",
+      "types": "./dist/types/vocab/index.d.ts"
+    }
   },
   "unpkg": "dist/web/openhps-rdf.min.js",
   "jsdelivr": "dist/web/openhps-rdf.min.js",
