--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
-    "@openhps/core": "^0.3.2",
+    "@openhps/core": "^0.3.5",
+    "@rdfjs/types": "^1.0.1",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.1",
