--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
+    "rdflib": "^2.2.10",
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.3",
     "standard-version": "^9.3.2",
