--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "rdf"
   ],
   "dependencies": {
-    "@inrupt/solid-client": "^1.14.0",
+    "@types/n3": "^1.10.3",
     "n3": ">=0.4.1",
     "uuid": "^8.3.2"
   },
@@ -70,9 +70,11 @@
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.1",
+    "@types/node-fetch": "^3.0.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "axios": "^0.24.0",
     "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
@@ -84,15 +86,16 @@
     "husky": "^7.0.2",
     "mocha": "^9.1.3",
     "mocha-junit-reporter": "^2.0.2",
+    "node-fetch": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "rdflib": "^2.2.10",
+    "rdfxml-streaming-parser": "^1.5.0",
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.3",
     "standard-version": "^9.3.2",
     "terser-webpack-plugin": "^5.2.4",
-    "tripledoc": "^1.1.0",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.6",
     "typescript": "^4.5.0-beta",
