--- a/package.json
+++ b/package.json
@@ -68,20 +68,23 @@
     "@types/n3": "^1.10.3",
     "n3": ">=0.4.1",
     "sparql-http-client": "^2.4.0",
+    "sparqljs": "^3.5.1",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.2",
+    "@openhps/core": ">=0.3.8",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
-    "@openhps/core": "^0.3.7-alpha.6",
+    "@openhps/core": "^0.3.8",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.1",
     "@types/node-fetch": "^3.0.3",
+    "@types/sparql-http-client": "^2.2.7",
+    "@types/sparqljs": "^3.1.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
