--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: '3'
 
 services:
     fuseki:
-        image: 'stain/jena-fuseki'
+        image: 'stain/jena-fuseki:jena4'
         ports:
         - 3030:3030
         environment:
             ADMIN_PASSWORD: 'test'
+            FUSEKI_DATASET_1: 'openhps-rdf'
