--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,7 @@ jobs:
     services:
       jena-fuseki:
         image: 'stain/jena-fuseki:jena4'
-        environment:
-          ADMIN_PASSWORD: 'test'
-          FUSEKI_DATASET_1: 'openhps-rdf'
+        options: -e ADMIN_PASSWORD=test -e FUSEKI_DATASET_1=openhps-rdf
         ports:
           - 3030:3030
     steps:
