--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,5 @@ services:
         - 3030:3030
         environment:
             ADMIN_PASSWORD: 'test'
-            FUSEKI_DATASET_1: 'openhps-rdf'
+            FUSEKI_DATASET_1: 'openhps-rdf-1'
+            FUSEKI_DATASET_2: 'openhps-rdf-2'
