--- a/package.json
+++ b/package.json
@@ -68,10 +68,9 @@
     "linked data"
   ],
   "dependencies": {
-    "@comunica/query-sparql-rdfjs": "^2.0.6",
+    "@comunica/query-sparql": "^2.2.0",
     "@types/n3": "^1.10.4",
     "n3": ">=1.16.0",
-    "sparql-http-client": "^2.4.0",
     "sparqljs": "^3.5.1"
   },
   "peerDependencies": {
@@ -81,24 +80,24 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@openhps/core": "^0.3.15",
+    "@comunica/query-sparql-rdfjs": "^2.2.0",
+    "@openhps/core": "^0.3.20",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
     "@types/node-fetch": "^3.0.3",
-    "@types/sparql-http-client": "^2.2.8",
     "@types/sparqljs": "^3.1.3",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "axios": "^0.26.1",
     "buffer": "^6.0.3",
     "chai": "^4.3.6",
-    "eslint": "^8.11.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-deprecation": "^1.3.2",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^38.0.6",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "mocha": "^9.2.2",
@@ -106,17 +105,18 @@
     "node-fetch": "^3.2.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
     "rdfxml-streaming-parser": "^1.5.0",
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.4",
     "standard-version": "^9.3.2",
     "terser-webpack-plugin": "^5.3.1",
     "ts-node": "^10.7.0",
-    "typedoc": "^0.22.13",
+    "typedoc": "^0.22.15",
     "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "wkt": "^0.1.1"
   },
   "nyc": {
     "branches": 0,
