--- a/package.json
+++ b/package.json
@@ -74,12 +74,13 @@
     "sparqljs": "^3.5.1"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.8",
+    "@openhps/core": ">=0.3.20",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@comunica/query-sparql-link-traversal": "0.0.2-alpha.2.0",
     "@comunica/query-sparql-rdfjs": "^2.2.0",
     "@openhps/core": "^0.3.20",
     "@types/chai": "^4.3.0",
@@ -97,7 +98,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-deprecation": "^1.3.2",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.1.1",
+    "eslint-plugin-jsdoc": "^39.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "mocha": "^9.2.2",
