--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "scripts": {
     "test": "mocha --config test/.mocharc.json",
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
+    "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-junit-reporter && nyc report --reporter=cobertura",
     "lint": "eslint src/ --ignore-pattern vocab --ignore-pattern bin",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
     "build": "npm run clean && npm run build:declarations && npm-run-all --parallel build:esm build:cjs build:typedoc && npm run build:webpack",
@@ -87,12 +88,12 @@
     "@openhps/core": "^0.3.37",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^18.6.1",
+    "@types/node": "^18.6.2",
     "@types/node-fetch": "^3.0.3",
     "@types/sparqljs": "^3.1.3",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "chai": "^4.3.6",
@@ -109,7 +110,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
-    "rdfxml-streaming-parser": "^2.0.0",
+    "rdfxml-streaming-parser": "^2.1.0",
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.4",
     "standard-version": "^9.5.0",
