ci: fixed cache for declarations

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           path: |
             **/dist
+            **/src/vocab
           key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Installing dependencies
         run: |
@@ -72,6 +73,7 @@ jobs:
         with:
           path: |
             **/dist
+            **/src/vocab
           key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Load test and coverage cache
         uses: actions/cache@v2
@@ -101,6 +103,7 @@ jobs:
         with:
           path: |
             **/dist
+            **/src/vocab
           key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Load document cache
         uses: actions/cache@v2
@@ -193,6 +196,7 @@ jobs:
         with:
           path: |
             **/dist
+            **/src/vocab
           key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
@@ -232,6 +236,7 @@ jobs:
         with:
           path: |
             **/dist
+            **/src/vocab
           key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
