--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
-  "module": "./dist/esm/index.js",
+  "module": "./dist/esm5/index.js",
+  "es2015": "./dist/esm/index.js",
   "exports": {
     ".": {
       "require": "./dist/cjs/index.js",
@@ -53,10 +54,11 @@
     "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-junit-reporter && nyc report --reporter=cobertura",
     "lint": "eslint src/ --ignore-pattern vocab --ignore-pattern bin",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
-    "build": "npm run clean && npm run build:declarations && npm-run-all --parallel build:esm build:cjs build:typedoc && npm run build:webpack",
-    "build:declarations": "ts-node ./src/bin/generate.ts && tsc --declaration --emitDeclarationOnly --outdir dist/types",
-    "build:esm": "tsc --module es2015 --outDir dist/esm",
-    "build:cjs": "tsc --module commonjs  --outDir dist/cjs",
+    "build": "npm run clean && npm-run-all --parallel build:ts:* && npm run build:webpack",
+    "build:ts:cjs": "tsc --build ./tsconfig/tsconfig.bundle.cjs.json",
+    "build:ts:esm": "tsc --build ./tsconfig/tsconfig.bundle.esm.json",
+    "build:ts:esm5": "tsc --build ./tsconfig/tsconfig.bundle.esm5.json",
+    "build:ts:types": "ts-node ./src/bin/generate.ts && tsc --build ./tsconfig/tsconfig.bundle.types.json",
     "build:webpack": "npm-run-all --parallel build:webpack:*",
     "build:webpack:prod": "webpack --env prod --progress --",
     "build:webpack:dev": "webpack --env dev --progress --",
@@ -77,7 +79,7 @@
     "sparqljs": "^3.5.2"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.3.23",
+    "@openhps/core": ">=0.3.38",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
@@ -88,25 +90,25 @@
     "@openhps/core": "^0.3.37",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^18.6.2",
+    "@types/node": "^18.6.3",
     "@types/node-fetch": "^3.0.3",
     "@types/sparqljs": "^3.1.3",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "chai": "^4.3.6",
-    "eslint": "^8.20.0",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-deprecation": "^1.3.2",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-jsdoc": "^39.3.4",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "mocha": "^10.0.0",
     "mocha-junit-reporter": "^2.0.2",
-    "node-fetch": "^3.2.9",
+    "node-fetch": "^3.2.10",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
@@ -116,7 +118,7 @@
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.3.3",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.9",
+    "typedoc": "^0.23.10",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
