ci: fix building declarations

--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
     "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-junit-reporter && nyc report --reporter=cobertura",
     "lint": "eslint src/ --ignore-pattern vocab --ignore-pattern bin",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
-    "build": "npm run clean && npm-run-all --parallel build:ts:* && npm run build:webpack",
+    "build": "npm run clean && npm run build:declarations && npm-run-all --parallel build:ts:* && npm run build:webpack",
     "build:ts:cjs": "tsc --build ./tsconfig/tsconfig.bundle.cjs.json",
     "build:ts:esm": "tsc --build ./tsconfig/tsconfig.bundle.esm.json",
     "build:ts:esm5": "tsc --build ./tsconfig/tsconfig.bundle.esm5.json",
-    "build:ts:types": "ts-node ./src/bin/generate.ts && tsc --build ./tsconfig/tsconfig.bundle.types.json",
+    "build:declarations": "ts-node ./src/bin/generate.ts",
+    "build:ts:types": "tsc --build ./tsconfig/tsconfig.bundle.types.json",
     "build:webpack": "npm-run-all --parallel build:webpack:*",
     "build:webpack:prod": "webpack --env prod --progress --",
     "build:webpack:dev": "webpack --env dev --progress --",
