--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "@comunica/query-sparql-link-traversal": "0.0.2-alpha.2.0",
     "@comunica/query-sparql-rdfjs": "^2.3.0",
     "@openhps/core": "^0.3.37",
+    "@openhps/geospatial": "^0.1.12",
+    "@openhps/rf": "^0.1.16",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.3",
