--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "scripts": {
     "test": "mocha --config test/.mocharc.json",
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
-    "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-junit-reporter && nyc report --reporter=cobertura",
+    "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-multi-reporters && nyc report --reporter=cobertura",
     "lint": "eslint src/ --ignore-pattern vocab --ignore-pattern bin",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
     "build": "npm run clean && npm run build:declarations && npm-run-all --parallel build:ts:* && npm run build:webpack",
@@ -111,6 +111,7 @@
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "mocha-junit-reporter": "^2.2.0",
+    "mocha-multi-reporters": "^1.5.1",
     "node-fetch": "^3.3.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
