--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@comunica/query-sparql-link-traversal": "0.0.2-alpha.2.0",
     "@comunica/query-sparql-rdfjs": "^2.6.6",
+    "@comunica/runner": "^2.6.0",
     "@openhps/core": "^0.3.55",
     "@openhps/fingerprinting": "^0.1.4",
     "@openhps/geospatial": "^0.1.16",
@@ -127,6 +128,7 @@
     "typedoc": "^0.23.24",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.1",
     "wkt": "^0.1.1"
   },
