--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openhps/rdf",
-  "version": "0.1.47",
+  "version": "0.2.0",
   "description": "Open Hybrid Positioning System",
   "author": "Maxim Van de Wynckel",
   "license": "Apache-2.0",
@@ -71,10 +71,11 @@
   "keywords": [
     "openhps",
     "rdf",
+    "semantic linked data",
     "linked data"
   ],
   "dependencies": {
-    "@comunica/query-sparql": "^2.6.6",
+    "@comunica/query-sparql": "^2.6.7",
     "@types/n3": "^1.10.4",
     "n3": ">=1.16.3",
     "sparqljs": "^3.6.2"
@@ -84,28 +85,28 @@
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.3",
-    "@commitlint/config-conventional": "^17.4.3",
-    "@comunica/query-sparql-link-traversal": "0.0.2-alpha.2.0",
-    "@comunica/query-sparql-rdfjs": "^2.6.6",
-    "@comunica/runner": "^2.6.0",
-    "@openhps/core": "^0.3.55",
-    "@openhps/fingerprinting": "^0.1.4",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@comunica/query-sparql-link-traversal": "0.1.0",
+    "@comunica/query-sparql-rdfjs": "^2.6.7",
+    "@comunica/runner": "^2.6.7",
+    "@openhps/core": "^0.4.13",
+    "@openhps/fingerprinting": "^0.1.5",
     "@openhps/geospatial": "^0.1.16",
-    "@openhps/rf": "^0.1.17",
+    "@openhps/rf": "^0.1.20",
     "@openhps/video": "^0.1.11",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.14.1",
     "@types/node-fetch": "^3.0.3",
     "@types/sparqljs": "^3.1.3",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "axios": "^1.3.3",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "axios": "^1.3.4",
     "buffer": "^6.0.3",
     "chai": "^4.3.7",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-deprecation": "^1.3.3",
     "eslint-plugin-import": "^2.27.5",
