--- a/tsconfig/tsconfig.base.json
+++ b/tsconfig/tsconfig.base.json
@@ -3,6 +3,7 @@
         "target": "es6",
         "module": "commonjs",
         "moduleResolution": "node",
+        "allowJs": true,
         "noImplicitAny": false,
         "noEmitHelpers": true,
         "importHelpers": true,
