--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
       "require": "./dist/cjs/index.serialization.js",
       "import": "./dist/esm/index.serialization.js",
       "types": "./dist/types/index.serialization.d.ts"
+    },
+    "./minimal": {
+      "require": "./dist/cjs/index.minimal.js",
+      "import": "./dist/esm/index.minimal.js",
+      "types": "./dist/types/index.minimal.d.ts"
     }
   },
   "unpkg": "dist/web/openhps-rdf.all.min.js",
@@ -83,7 +88,7 @@
     "sparqljs": "^3.6.2"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.4.18",
+    "@openhps/core": ">=0.4.20",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
@@ -94,8 +99,8 @@
     "@comunica/runner": "^2.6.8",
     "@openhps/core": "^0.4.19",
     "@openhps/fingerprinting": "^0.1.5",
-    "@openhps/geospatial": "^0.1.16",
-    "@openhps/rf": "^0.1.23",
+    "@openhps/geospatial": "^0.1.17",
+    "@openhps/rf": "^0.1.28",
     "@openhps/video": "^0.1.11",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
@@ -103,8 +108,8 @@
     "@types/node-fetch": "^3.0.3",
     "@types/sparqljs": "^3.1.3",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "axios": "^1.3.5",
     "buffer": "^6.0.3",
     "chai": "^4.3.7",
@@ -112,7 +117,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-deprecation": "^1.4.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^41.1.1",
+    "eslint-plugin-jsdoc": "^43.0.6",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
@@ -129,7 +134,7 @@
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.3.7",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.24.2",
+    "typedoc": "^0.24.4",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
     "webpack-bundle-analyzer": "^4.8.0",
