--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "*.d.ts"
   ],
   "scripts": {
+    "benchmark": "ts-node test/bench/serialization.bench.ts",
     "examples": "shx cp node_modules/@openhps/*/dist/web/*.* examples/common/ && shx cp dist/web/*.* examples/common/ && serve ./examples",
     "test": "mocha --config test/.mocharc.json",
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
@@ -82,51 +83,53 @@
     "linked data"
   ],
   "dependencies": {
-    "@comunica/query-sparql": "^2.7.1",
-    "@types/n3": "^1.10.4",
-    "n3": ">=1.16.4",
-    "sparqljs": "^3.7.0"
+    "@comunica/query-sparql": "^2.8.2",
+    "@types/n3": "^1.16.0",
+    "n3": ">=1.17.1",
+    "sparqljs": "^3.7.1"
   },
   "peerDependencies": {
     "@openhps/core": ">=0.4.20",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@comunica/query-sparql-link-traversal": "0.2.0",
-    "@comunica/query-sparql-rdfjs": "^2.7.1",
-    "@comunica/runner": "^2.7.0",
-    "@openhps/core": "^0.4.24",
+    "@comunica/query-sparql-rdfjs": "^2.8.2",
+    "@comunica/runner": "^2.8.2",
+    "@openhps/core": "^0.4.43",
     "@openhps/fingerprinting": "^0.1.5",
-    "@openhps/geospatial": "^0.1.26",
-    "@openhps/rf": "^0.1.36",
+    "@openhps/geospatial": "^0.1.27",
+    "@openhps/rf": "^0.1.40",
     "@openhps/video": "^0.1.11",
+    "@types/benchmark": "^2.1.2",
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.5.1",
     "@types/node-fetch": "^3.0.3",
     "@types/sparqljs": "^3.1.4",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "axios": "^1.4.0",
+    "benchmark": "^2.1.4",
     "buffer": "^6.0.3",
     "chai": "^4.3.7",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-deprecation": "^1.4.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^46.2.6",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-deprecation": "^1.5.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsdoc": "^46.4.6",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
-    "mocha-junit-reporter": "^2.2.0",
+    "mocha-junit-reporter": "^2.2.1",
     "mocha-multi-reporters": "^1.5.1",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.2",
     "rdfxml-streaming-parser": "^2.2.3",
     "reflect-metadata": ">=0.1.13",
     "serve": "^14.2.0",
@@ -135,8 +138,8 @@
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.8",
-    "typescript": "^5.1.3",
-    "webpack": "^5.87.0",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.4",
     "wkt": "^0.1.1"
