--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
       "require": "./dist/cjs/index.minimal.js",
       "import": "./dist/esm/index.minimal.js",
       "types": "./dist/types/index.minimal.d.ts"
+    },
+    "./generator": {
+      "require": "./dist/cjs/index.generator.js",
+      "import": "./dist/esm/index.generator.js",
+      "types": "./dist/types/index.generator.d.ts"
     }
   },
   "unpkg": "dist/web/openhps-rdf.all.min.js",
@@ -83,44 +88,44 @@
     "linked data"
   ],
   "dependencies": {
-    "@comunica/query-sparql": "^2.8.3",
+    "@comunica/query-sparql": "^2.9.0",
     "@types/n3": "^1.16.0",
     "n3": ">=1.17.1",
     "sparqljs": "^3.7.1"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.4.46",
+    "@openhps/core": ">=0.5.7",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@comunica/query-sparql-link-traversal": "0.2.0",
-    "@comunica/query-sparql-rdfjs": "^2.8.3",
+    "@comunica/query-sparql-rdfjs": "^2.9.0",
     "@comunica/runner": "^2.8.2",
-    "@openhps/core": "^0.4.45",
+    "@openhps/core": "^0.5.8",
     "@openhps/fingerprinting": "^0.1.5",
     "@openhps/geospatial": "^0.1.27",
     "@openhps/rf": "^0.1.40",
     "@openhps/video": "^0.1.11",
-    "@types/benchmark": "^2.1.2",
-    "@types/chai": "^4.3.5",
+    "@types/benchmark": "^2.1.3",
+    "@types/chai": "^4.3.6",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.4",
+    "@types/node": "^20.6.2",
     "@types/node-fetch": "^3.0.3",
     "@types/sparqljs": "^3.1.4",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "axios": "^1.4.0",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "axios": "^1.5.0",
     "benchmark": "^2.1.4",
     "buffer": "^6.0.3",
-    "chai": "^4.3.7",
-    "eslint": "^8.47.0",
+    "chai": "^4.3.8",
+    "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-deprecation": "^1.5.0",
+    "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^46.5.0",
+    "eslint-plugin-jsdoc": "^46.8.1",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
@@ -129,7 +134,7 @@
     "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "rdfxml-streaming-parser": "^2.2.3",
     "reflect-metadata": ">=0.1.13",
     "serve": "^14.2.1",
@@ -137,10 +142,10 @@
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.24.8",
-    "typescript": "^5.1.6",
+    "typedoc": "^0.25.1",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "wkt": "^0.1.1"
   },
