--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
     "test": "mocha --config test/.mocharc.json",
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
     "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-multi-reporters && nyc report --reporter=cobertura",
-    "lint": "eslint src/ --ignore-pattern vocab --ignore-pattern bin --ignore-pattern engine-default.js",
+    "lint": "eslint src/ --ignore-pattern vocab --ignore-pattern bin --ignore-pattern engine-*.js",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
     "build": "npm run clean && npm-run-all --parallel build:comunica build:declarations && npm-run-all --parallel build:ts:* && npm run build:webpack",
-    "build:comunica": "comunica-compile-config config/config-default.json > src/service/engine-default.js",
+    "build:comunica": "npm-run-all --parallel build:comunica:*",
+    "build:comunica:default": "comunica-compile-config config/config-default.json > src/service/engine-default.js",
+    "build:comunica:experimental": "comunica-compile-config config/config-minimal.json > src/service/engine-minimal.js",
     "build:ts:cjs": "tsc --build ./tsconfig/tsconfig.bundle.cjs.json",
     "build:ts:esm": "tsc --build ./tsconfig/tsconfig.bundle.esm.json",
     "build:ts:esm5": "tsc --build ./tsconfig/tsconfig.bundle.esm5.json",
