--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@openhps/geospatial": "^0.1.27",
     "@openhps/rf": "^0.1.40",
     "@openhps/video": "^0.1.11",
+    "@types/axios": "^0.14.0",
     "@types/benchmark": "^2.1.3",
     "@types/chai": "^4.3.8",
     "@types/mocha": "^10.0.2",
