--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "sideEffects": [
     "./**/mapping/**/*"
   ],
+  "bin": {
+    "openhps-rdf": "./dist/cjs/bin/generator.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/OpenHPS/openhps-rdf.git"
@@ -96,51 +99,53 @@
   ],
   "dependencies": {
     "@comunica/query-sparql": "^2.10.0",
-    "@types/n3": "^1.16.3",
+    "@inquirer/prompts": "^3.3.0",
+    "@types/n3": "^1.16.4",
+    "chalk": "^5.3.0",
     "n3": ">=1.17.2",
     "sparqljs": "^3.7.1",
     "wkt": "^0.1.1"
   },
   "optionalDependencies": {
     "@openhps/fingerprinting": ">=0.1.5",
-    "@openhps/geospatial": ">=0.1.27",
+    "@openhps/geospatial": ">=0.1.28",
     "@openhps/rf": ">=0.1.61",
     "@openhps/video": ">=0.1.11"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.5.9",
+    "@openhps/core": ">=0.6.1",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@comunica/query-sparql-link-traversal": "0.2.0",
     "@comunica/query-sparql-rdfjs": "^2.10.0",
     "@comunica/runner": "^2.10.0",
-    "@openhps/core": "^0.5.15",
+    "@openhps/core": "^0.6.2",
     "@openhps/fingerprinting": "^0.1.5",
     "@openhps/geospatial": "^0.1.27",
     "@openhps/rf": "^0.1.61",
     "@openhps/video": "^0.1.11",
     "@types/axios": "^0.14.0",
-    "@types/benchmark": "^2.1.4",
-    "@types/chai": "^4.3.9",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "^20.8.9",
+    "@types/benchmark": "^2.1.5",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.5",
+    "@types/node": "^20.9.3",
     "@types/node-fetch": "^3.0.3",
-    "@types/sparqljs": "^3.1.7",
-    "@types/uuid": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "axios": "^1.6.0",
+    "@types/sparqljs": "^3.1.8",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "axios": "^1.6.2",
     "benchmark": "^2.1.4",
     "buffer": "^6.0.3",
     "chai": "^4.3.10",
-    "eslint": "^8.52.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-jsdoc": "^46.9.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
@@ -149,18 +154,18 @@
     "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.3",
-    "rdfxml-streaming-parser": "^2.2.3",
+    "prettier": "^3.1.0",
+    "rdfxml-streaming-parser": "^2.3.0",
     "reflect-metadata": ">=0.1.13",
     "serve": "^14.2.1",
     "shx": "^0.3.4",
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.25.2",
-    "typescript": "^5.2.2",
+    "typedoc": "^0.25.3",
+    "typescript": "^5.2.X",
     "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4"
   },
   "nyc": {
