--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@comunica/query-sparql": "^2.10.0",
     "@inquirer/prompts": "^3.3.0",
     "@types/n3": "^1.16.4",
-    "chalk": "^5.3.0",
+    "chalk": "^4.X",
     "n3": ">=1.17.2",
     "sparqljs": "^3.7.1",
     "wkt": "^0.1.1"
