--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "*.d.ts"
   ],
   "scripts": {
+    "generator": "./dist/cjs/bin/generator.js",
     "benchmark": "ts-node test/bench/serialization.bench.ts",
     "examples": "shx cp node_modules/@openhps/*/dist/web/*.* examples/common/ && shx cp dist/web/*.* examples/common/ && serve ./examples",
     "test": "mocha --config test/.mocharc.json",
