feat: include base uri and prefix in generated ontologies

--- a/package.json
+++ b/package.json
@@ -99,10 +99,10 @@
     "linked data"
   ],
   "dependencies": {
-    "@comunica/query-sparql": "^2.10.0",
+    "@comunica/query-sparql": "^2.10.1",
     "@inquirer/prompts": "^3.3.0",
     "@types/n3": "^1.16.4",
-    "chalk": "^4.X",
+    "chalk": "^4",
     "n3": "^1.17.2",
     "sparqljs": "^3.7.1",
     "wkt": "^0.1.1"
@@ -111,39 +111,39 @@
     "@openhps/fingerprinting": ">=0.1.5",
     "@openhps/geospatial": ">=0.1.28",
     "@openhps/rf": ">=0.1.61",
-    "@openhps/video": ">=0.1.11"
+    "@openhps/video": ">=0.1.14"
   },
   "peerDependencies": {
-    "@openhps/core": ">=0.6.1",
+    "@openhps/core": ">=0.6.5",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@comunica/query-sparql-link-traversal": "0.2.0",
-    "@comunica/query-sparql-rdfjs": "^2.10.0",
+    "@comunica/query-sparql-rdfjs": "^2.10.1",
     "@comunica/runner": "^2.10.0",
     "@openhps/core": "^0.6.2",
     "@openhps/fingerprinting": "^0.1.5",
-    "@openhps/geospatial": "^0.1.27",
+    "@openhps/geospatial": "^0.1.28",
     "@openhps/rf": "^0.1.61",
     "@openhps/video": "^0.1.11",
     "@types/axios": "^0.14.0",
     "@types/benchmark": "^2.1.5",
     "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.5",
-    "@types/node": "^20.9.3",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.3",
     "@types/node-fetch": "^3.0.3",
-    "@types/sparqljs": "^3.1.8",
+    "@types/sparqljs": "^3.1.9",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "axios": "^1.6.2",
     "benchmark": "^2.1.4",
     "buffer": "^6.0.3",
     "chai": "^4.3.10",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.9.0",
@@ -163,8 +163,8 @@
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.25.3",
-    "typescript": "^5.2.X",
+    "typedoc": "^0.25.4",
+    "typescript": "^5.3",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4"
