--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "test": "mocha --config test/.mocharc.json",
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
     "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-multi-reporters && nyc report --reporter=cobertura",
-    "lint": "eslint src/ --ignore-pattern vocab --ignore-pattern bin --ignore-pattern engine-*.js",
+    "lint": "eslint src/ --ignore-pattern bin --ignore-pattern engine-*.js",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
     "build": "npm run clean && npm-run-all --parallel build:comunica build:declarations && npm-run-all --parallel build:ts:* && npm run build:webpack",
     "build:comunica": "npm-run-all --parallel build:comunica:*",
@@ -102,14 +102,15 @@
     "@comunica/query-sparql": "^2.10.1",
     "@inquirer/prompts": "^3.3.0",
     "@types/n3": "^1.16.4",
-    "chalk": "^4",
+    "chalk": "^5",
     "n3": "^1.17.2",
     "sparqljs": "^3.7.1",
-    "wkt": "^0.1.1"
+    "wkt": "^0.1.1",
+    "axios": "^1.6.2"
   },
   "optionalDependencies": {
     "@openhps/fingerprinting": ">=0.1.5",
-    "@openhps/geospatial": ">=0.1.28",
+    "@openhps/geospatial": ">=0.1.29",
     "@openhps/rf": ">=0.1.61",
     "@openhps/video": ">=0.1.14"
   },
@@ -132,13 +133,12 @@
     "@types/benchmark": "^2.1.5",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.3",
+    "@types/node": "^20.10.4",
     "@types/node-fetch": "^3.0.3",
     "@types/sparqljs": "^3.1.9",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "axios": "^1.6.2",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "benchmark": "^2.1.4",
     "buffer": "^6.0.3",
     "chai": "^4.3.10",
@@ -155,14 +155,14 @@
     "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "rdfxml-streaming-parser": "^2.4.0",
-    "reflect-metadata": ">=0.1.13",
+    "reflect-metadata": ">=0.1.14",
     "serve": "^14.2.1",
     "shx": "^0.3.4",
     "standard-version": "^9.5.0",
     "terser-webpack-plugin": "^5.3.9",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.25.4",
     "typescript": "^5.3",
     "webpack": "^5.89.0",
