--- a/package.json
+++ b/package.json
@@ -107,11 +107,11 @@
     "@comunica/query-sparql": "^2.10.1",
     "@inquirer/prompts": "^3.3.0",
     "@types/n3": "^1.16.4",
+    "axios": "^1.6.2",
     "chalk": "^4",
     "n3": "^1.17.2",
     "sparqljs": "^3.7.1",
-    "wkt": "^0.1.1",
-    "axios": "^1.6.2"
+    "wkt": "^0.1.1"
   },
   "optionalDependencies": {
     "@openhps/fingerprinting": ">=0.1.5",
