--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "chalk": "^4",
     "n3": "^1.17.2",
     "sparqljs": "^3.7.1",
-    "wkt": "^0.1.1"
+    "wkt": "^0.1.1",
+    "rdfxml-streaming-parser": "^2.4.0"
   },
   "optionalDependencies": {
     "@openhps/fingerprinting": ">=0.1.7",
@@ -161,7 +162,6 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^3.1.1",
-    "rdfxml-streaming-parser": "^2.4.0",
     "reflect-metadata": ">=0.1.14",
     "serve": "^14.2.1",
     "shx": "^0.3.4",
