--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@types/n3": "^1.16.4",
     "axios": "^1.6.5",
     "chalk": "^4",
+    "fs-extra": "^11.2.0",
     "jsdoc3-parser": "^3.0.0",
     "n3": "^1.17.2",
     "rdfxml-streaming-parser": "^2.4.0",
