--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
     "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-multi-reporters && nyc report --reporter=cobertura",
     "lint": "eslint src/ --ignore-pattern bin --ignore-pattern engine-*.js --ignore-pattern **/vocab/*.ts",
+    "update": "ncu -u -x eslint,chai",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
     "build": "npm run clean && npm-run-all --parallel build:comunica build:declarations && npm-run-all --parallel build:ts:* && npm run build:webpack",
     "build:comunica": "npm-run-all --parallel build:comunica:*",
@@ -104,22 +105,22 @@
     "linked data"
   ],
   "dependencies": {
-    "@comunica/query-sparql": "^2.10.1",
-    "@inquirer/prompts": "^3.3.0",
+    "@comunica/query-sparql": "^3.1.2",
+    "@inquirer/prompts": "^5.0.6",
     "@types/n3": "^1.16.4",
-    "axios": "^1.6.5",
+    "axios": "^1.7.2",
     "chalk": "^4",
     "fs-extra": "^11.2.0",
     "jsdoc3-parser": "^3.0.0",
-    "n3": "^1.17.2",
+    "n3": "^1.17.4",
     "rdfxml-streaming-parser": "^2.4.0",
     "sparqljs": "^3.7.1",
     "wkt": "^0.1.1"
   },
   "optionalDependencies": {
-    "@openhps/fingerprinting": ">=0.1.7",
-    "@openhps/geospatial": ">=0.1.29",
-    "@openhps/rf": ">=0.1.61",
+    "@openhps/fingerprinting": ">=0.1.8",
+    "@openhps/geospatial": ">=0.1.30",
+    "@openhps/rf": ">=0.1.62",
     "@openhps/video": ">=0.1.14"
   },
   "peerDependencies": {
@@ -127,53 +128,52 @@
     "reflect-metadata": ">=0.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@comunica/query-sparql-link-traversal": "0.2.0",
-    "@comunica/query-sparql-rdfjs": "^2.10.1",
-    "@comunica/runner": "^2.10.0",
-    "@openhps/core": "^0.7.5",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@comunica/runner": "^3.1.0",
+    "@openhps/core": "^0.7.7",
     "@openhps/fingerprinting": "^0.1.8",
     "@openhps/geospatial": "^0.1.29",
     "@openhps/rf": "^0.1.61",
     "@openhps/video": "^0.1.14",
     "@types/axios": "^0.14.0",
     "@types/benchmark": "^2.1.5",
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.4",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^20.14.8",
     "@types/node-fetch": "^3.0.3",
-    "@types/sparqljs": "^3.1.9",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@types/sparqljs": "^3.1.10",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "benchmark": "^2.1.4",
     "buffer": "^6.0.3",
     "chai": "^4.3.10",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^46.9.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
-    "mocha": "^10.2.0",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.3.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "mocha": "^10.4.0",
     "mocha-junit-reporter": "^2.2.1",
     "mocha-multi-reporters": "^1.5.1",
     "node-fetch": "^3.3.2",
+    "npm-check-updates": "^16.14.20",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "prettier": "^3.1.1",
-    "reflect-metadata": ">=0.1.14",
-    "serve": "^14.2.1",
+    "nyc": "^17.0.0",
+    "prettier": "^3.3.2",
+    "reflect-metadata": ">=0.2.2",
+    "serve": "^14.2.3",
     "shx": "^0.3.4",
     "standard-version": "^9.5.0",
-    "terser-webpack-plugin": "^5.3.9",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.25.4",
-    "typescript": "^5.3",
-    "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.10.1",
+    "typedoc": "^0.26.2",
+    "typescript": "^5.5",
+    "webpack": "^5.92.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4"
   },
   "nyc": {
