chore: downgraded chalk

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
     "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-multi-reporters && nyc report --reporter=cobertura",
     "lint": "eslint src/ --ignore-pattern bin --ignore-pattern engine-*.js --ignore-pattern **/vocab/*.ts",
-    "update": "ncu -u -x eslint,chai",
+    "update": "ncu -u -x eslint,chai,chalk",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
     "build": "npm run clean && npm-run-all --parallel build:comunica build:declarations && npm-run-all --parallel build:ts:* && npm run build:webpack",
     "build:comunica": "npm-run-all --parallel build:comunica:*",
@@ -108,7 +108,7 @@
     "@inquirer/prompts": "^5.1.0",
     "@types/n3": "^1.16.4",
     "axios": "^1.7.2",
-    "chalk": "^5",
+    "chalk": "^4",
     "fs-extra": "^11.2.0",
     "jsdoc3-parser": "^3.0.0",
     "n3": "^1.17.4",
