fix: serialise to and from json-ld

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "chalk": "^4",
     "fs-extra": "^11.2.0",
     "jsdoc3-parser": "^3.0.0",
+    "jsonld": "^8.3.3",
     "n3": "^1.17.4",
     "rdfxml-streaming-parser": "^2.4.0",
     "sparqljs": "^3.7.1",
@@ -139,6 +140,7 @@
     "@types/axios": "^0.14.0",
     "@types/benchmark": "^2.1.5",
     "@types/chai": "^4.3.16",
+    "@types/jsonld": "^1.5.15",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.9",
     "@types/node-fetch": "^3.0.3",
