--- a/package.json
+++ b/package.json
@@ -132,6 +132,9 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@comunica/runner": "^4.2.0",
+    "@eslint/compat": "^1.3.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.34.0",
     "@openhps/core": "^1.0.16",
     "@openhps/fingerprinting": "^0.1.8",
     "@openhps/geospatial": "^0.1.30",
@@ -156,6 +159,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsdoc": "^54.1.1",
     "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "mocha": "^11.7.1",
     "mocha-junit-reporter": "^2.2.1",
